[gd_scene load_steps=9 format=3 uid="uid://ehxjun1gtjbc"]

[ext_resource type="Script" path="res://player.gd" id="1_ljjms"]
[ext_resource type="Script" path="res://camera_controller.gd" id="2_q32wd"]
[ext_resource type="AudioStream" uid="uid://cb3tqjp83f7ak" path="res://audio/footstep_audio_randomizer.tres" id="3_nbtyx"]
[ext_resource type="AudioStream" uid="uid://csnxln3162ml" path="res://audio/sfx_teleport.wav" id="4_fv1ao"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_44s3o"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nve2s"]
shading_mode = 0
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xv315"]

[sub_resource type="PrismMesh" id="PrismMesh_m52da"]
size = Vector3(5, 5, 1)

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_mask = 9
script = ExtResource("1_ljjms")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_44s3o")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
material_override = SubResource("StandardMaterial3D_nve2s")
cast_shadow = 0
mesh = SubResource("CapsuleMesh_xv315")

[node name="MapIndicator" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -6.55671e-08, 1, 0, -1.5, -4.37114e-08, 0, 100, -1)
material_override = SubResource("StandardMaterial3D_nve2s")
cast_shadow = 0
mesh = SubResource("PrismMesh_m52da")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.85, 0)
script = ExtResource("2_q32wd")

[node name="InteractRay" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -3)
collision_mask = 10
hit_back_faces = false
collide_with_areas = true

[node name="Flashlight" type="SpotLight3D" parent="Camera3D"]
spot_range = 20.0
spot_attenuation = 0.0

[node name="OverviewCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1000, 0)
projection = 1
current = true
size = 250.0

[node name="OverviewLight" type="DirectionalLight3D" parent="OverviewCamera"]
light_energy = 0.2

[node name="FootstepAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_nbtyx")
volume_db = -25.0
bus = &"SFX"

[node name="TeleportAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_fv1ao")
